# Element-Editor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/filewatch/include/filewatch/: filewatch.h
lib/tclap/include/tclap/: MultiArg.h  ValueArg.h
resources/: editor.txt
resources/shader_include/: global_data.glslinc
src/: main.cpp  window_stub_temp.cpp
src/asset/: asset_events.h  asset_tracker.cpp  dependencies.cpp  dependencies.h  importer.cpp  importer.h  tracker.cpp  tracker.h  tracker_linux.cpp  tracker_windows.cpp
src/asset/creators/: asset_creators_info.cpp  asset_creators_info.h  frag.cpp  glslinc.cpp  material.cpp  pipeline.cpp  scene.cpp  vert.cpp
src/asset/importers/: default_importer.cpp  default_importer.h  frag.cpp  glslinc.cpp  material.cpp  mesh.cpp  null_importer.cpp  null_importer.h  pipeline.cpp  raw.cpp  raw.h  scene.cpp  vert.cpp
src/asset/importers/helpers/: shader.cpp  shader.h
src/asset/loaders/: material.h  mesh.h  pipeline.h  scene.h
src/asset/type_info/: asset_type_info.cpp  asset_type_info.h
src/core/: fs_editor.cpp  fs_editor.h
src/display/: backend_sdl.cpp  events_sdl.cpp  input_sdl.cpp  window_sdl.cpp
src/editor/: editor.cpp  editor.h  preview_launcher.cpp  preview_launcher.h  project.cpp  project.h  project_events.h
src/graphics/: vulkan_qt.cpp  vulkan_qt.h
src/mesh/: mesh.h  mesh_loader.h  model_importer.cpp  model_importer.h  model_importer_settings.h
src/plugins/: editor.cpp  editor.h
src/render/: material_destroy.cpp  material_reload.cpp  mesh_reload.cpp  pipeline_destroy.cpp  pipeline_process.cpp  pipeline_process.h  qt_display.cpp  qt_display.h  render_when_loaded.cpp  required_extensions.cpp  shader_compiler.cpp  shader_compiler.h  shader_reflect.cpp  shader_reflect.h  vulkan_qt.cpp  vulkan_qt.h
src/render/opengl_qt/: qt_element_gl_widget.cpp  qt_element_gl_widget.h  qt_opengl_context.cpp  qt_opengl_context.h
src/resource/: editor_loader.h
src/scenegraph/: editor_camera_node_storage.cpp  editor_camera_node_storage.h  editor_scene_loader.cpp  editor_scene_loader.h
src/serialization/: mesh.h  serializers_editor.h
src/serialization/mesh/: mesh.h
src/shader/: compiler.cpp  compiler.h  reflect.cpp  reflect.h
src/ui/: asset_chooser.cpp  asset_chooser.h  asset_chooser.ui  element_editor.cpp  element_editor.h  element_editor.ui  impl_qt_ui.cpp  impl_ui_qt.h  import_3d_model.cpp  import_3d_model.h  import_3d_model.ui  project_properties.cpp  project_properties.h  project_properties.ui  utils.cpp  utils.h  vulkan_window.cpp  vulkan_window.h
src/ui/menus/: menu_new_asset.cpp  menu_new_asset.h  menu_new_node.cpp  menu_new_node.h
src/ui/models/: model_asset_chooser.cpp  model_asset_chooser.h  model_assets_tree.cpp  model_assets_tree.h  model_scenegraph_tree.cpp  model_scenegraph_tree.h
src/ui/type_info/: asset_type_info.cpp  asset_type_info.h
src/ui/widgets/: QULongSpinBox.cpp  QULongSpinBox.h  activable_tree.cpp  activable_tree.h  array_input.cpp  array_input.h  asset_input.cpp  asset_input.h  matrix_input.cpp  matrix_input.h  numeric_input.cpp  numeric_input.h  properties_asset.cpp  properties_asset.h  properties_container.cpp  properties_container.h  properties_node.cpp  properties_node.h  properties_scene.cpp  properties_scene.h  properties_scene_form.cpp  properties_scene_form.h  properties_standard_form.cpp  properties_standard_form.h  properties_transform.cpp  properties_transform.h  properties_transform_form.cpp  properties_transform_form.h  vector_input.cpp  vector_input.h
src/ui/widgets/assets/: properties_asset_material.cpp  properties_asset_material.h  properties_asset_material_form.cpp  properties_asset_material_form.h  properties_asset_pipeline.cpp  properties_asset_pipeline.h  properties_asset_pipeline_form.cpp  properties_asset_pipeline_form.h
src/ui/widgets/nodes/: properties_node_camera.cpp  properties_node_camera.h  properties_node_camera_form.cpp  properties_node_camera_form.h  properties_node_mesh.cpp  properties_node_mesh.h  properties_node_mesh_form.cpp  properties_node_mesh_form.h
